# familiar-actors

./: .gitignore  .pre-commit-config.yaml  PLAN.md  PLAN_multi_photo.md  Procfile  README.md  nixpacks.toml  pyproject.toml  pytest.ini  railway.json
familiar_actors/: actor_search.py  app.py  cli.py  config.py  database.py  embeddings.py  models.py  similarity.py  tmdb.py
familiar_actors/routes/: search.py
familiar_actors/static/: search.js  style.css
familiar_actors/templates/: about.html  base.html  cast.html  full_page.html  index.html  results.html  technical.html
scripts/: consolidate_index.py  crawl.py
tests/: test_actor_search.py  test_models.py  test_routes.py  test_similarity.py
