[project]
name = "familiar-actors"
version = "0.1.0"
description = ""
authors = [
    {name = "Steven Zuber", email = "stevenjzuber@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.45.0,<1.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.2.0",
    "pillow>=10.0.0",
    "rapidfuzz>=3.14.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.2.0",
]
pipeline = [
    "open-clip-torch>=2.26.0",
]

[project.scripts]
familiar-actors = "familiar_actors.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.*",
    "/docs",
    "/tests",
    "/dist",
]
